test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Public_Key/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Tue, 10 Feb 2026 09:30:23 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="q82J7FN66cNVNWv8XeMFt56JHvekJXjU", algorithm=MD5, qop="auth", stale=false

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}